# hyper-surrogate-model

./: .gitattributes  .gitignore  COMPARISON_TUNING_README.md  CONFIG_GUIDE.md  README.md  cli.py  config.yaml  config_template.yaml  convert_nasbench201.py  evaluation_summary.md  main.py  pyproject.toml  requirements.txt  test_colored_logger.py  test_comparison_tuner.py  test_gpu.py  test_system.py  test_trainable_llm.py
data/: config.py  parser.py  preprocess.py
data/preprocessing/: config.py  run_preprocessing.py  test.py
data/results/: predictions.json
data_processed/: master_dataset.parquet
entries/: continue_training.py  data_reconstruct.py  evaluate.py  init_training.py  pipelined_training.py  quick_compare.py  training_init.py  training_transfer.py
entries_acc/: data_reconstruct.py  evaluate.py  training.py
entries_accuracy/: data_reconstruct.py  evaluate.py  training.py  training_init.py  training_transfer.py
entries_rank/: evaluate.py  training.py
evaluate/: compare.py  evaluate.py  loss_history.py
example/: evaluate.py  llm_quick_interface.py
examples/: classification_example.py  classification_pipeline_example.py  complete_pipeline_example.py  feedback_example.py  pipelined_training.py  quick_compare.py  simple_trainable_llm_example.py  tunning_example.py
hypersurrogatemodel/: __init__.py  comparison_tuner.py  config.py  dataset.py  distribute.py  evaluator.py  model.py  trainer.py  utils.py
hypersurrogatemodel/preprocessing/: config.py  run_preprocessing.py
models/: dl_models.py  ml_models.py
utils/: metrics.py  trainer.py
(+8 files in other folders)
