[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypersurrogatemodel"
version = "0.1.0"
description = "AI model fine-tuning with Gemma-3-270m-it"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "datasets>=3.0.0",
    "accelerate>=1.1.0",
    "peft>=0.13.0",
    "scikit-learn>=1.3.0",
    "gputil>=1.4.0",
    "pyyaml>=6.0.2",
    "nas-bench-201>=2.1",
    "scipy>=1.16.1",
    "huggingface-hub>=0.34.4",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "jupyter>=1.0.0",
]

[project.scripts]
train_acc = "cli:train_acc"
train_rank = "cli:train_rank"
eval = "cli:evaluate"
data = "cli:data_process"
train_test = "cli:train_test"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "flake8",
]

[tool.hatch.envs.training]
dependencies = [
    "datasets",
    "accelerate",
    "peft"
]

